chore: remove mutating webhook configuration
The mutating webhook is no longer used because we
moved the defaulter logic to using kubebuilder
markers.

--- a/config/dev/kustomization.yaml
+++ b/config/dev/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ../certmanager
 
 replacements:
-  - source: # Add cert-manager annotation to ValidatingWebhookConfiguration, MutatingWebhookConfiguration and CRDs
+  - source: # Add cert-manager annotation to ValidatingWebhookConfiguration and CRDs
       kind: Certificate
       group: cert-manager.io
       version: v1
@@ -16,14 +16,6 @@ replacements:
     targets:
       - select:
           kind: ValidatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 0
-          create: true
-      - select:
-          kind: MutatingWebhookConfiguration
         fieldPaths:
           - .metadata.annotations.[cert-manager.io/inject-ca-from]
         options:
@@ -39,14 +31,6 @@ replacements:
     targets:
       - select:
           kind: ValidatingWebhookConfiguration
-        fieldPaths:
-          - .metadata.annotations.[cert-manager.io/inject-ca-from]
-        options:
-          delimiter: '/'
-          index: 1
-          create: true
-      - select:
-          kind: MutatingWebhookConfiguration
         fieldPaths:
           - .metadata.annotations.[cert-manager.io/inject-ca-from]
         options:
