--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,6 +24,8 @@ jobs:
             path: config/crd
           - name: ghcr.io/datum-cloud/telemetry-services-operator/vector-telemetry-exporter
             path: config/vector
+          - name: ghcr.io/datum-cloud/telemetry-services-operator/telemetry-services-operator-kustomize
+            path: config/default
     uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@v1.1.0
     with:
       bundle-name: ${{ matrix.bundles.name }}
