feat: monitor vector deployment
This commit adds a new VMServiceScrape
configuration to scrape metrics from the vector
deployment. A new transformation step was added to
split export policy metrics to add a new labels
with the export policy ID and source/sink name.

--- a/config/vector/base-vector-config.yaml
+++ b/config/vector/base-vector-config.yaml
@@ -5,6 +5,38 @@ sources:
     type: internal_logs
   internal_metrics:
     type: internal_metrics
+
+transforms:
+  component_labeler:
+    type: remap
+    inputs:
+      - internal_metrics
+    source: |
+      # Only process metrics that are sources or sinks
+      if .tags.component_kind != "source" && .tags.component_kind != "sink" {
+        abort "Skipping non-source or non-sink component"
+      }
+
+      # Split component_id into parts
+      parts = split!(.tags.component_id, ":")
+
+      # Only process if we have at least 2 parts
+      if length(parts) != 2 {
+        abort "Skipping component with invalid component_id"
+      }
+
+      log(parts, level: "debug", rate_limit_secs: 0)
+
+      # First part is always the export policy UID
+      .tags.export_policy_uid = parts[0]
+
+        # Add source_name or sink_name based on component type
+      if .tags.component_kind == "source" {
+        .tags.source_name = parts[1]
+      } else if .tags.component_kind == "sink" {
+        .tags.sink_name = parts[1]
+      }
+
 sinks:
   console:
     type: console
@@ -12,8 +44,9 @@ sinks:
       - internal_logs
     encoding:
       codec: json
+
   prometheus_export:
     type: prometheus_exporter
     inputs:
-      - internal_metrics
+      - component_labeler
     address: 0.0.0.0:9598
