feat: add resource tags to vector metrics
Updates the vector configuration and resulting
export policy configuration to add tags to the
source and sink configurations created for export
policies to identify the export policy.

--- a/config/vector/base-vector-config.yaml
+++ b/config/vector/base-vector-config.yaml
@@ -21,20 +21,30 @@ transforms:
       parts = split!(.tags.component_id, ":")
 
       # Only process if we have at least 2 parts
-      if length(parts) != 2 {
+      if length(parts) != 5 {
         abort "Skipping component with invalid component_id"
+      } else if parts[0] != "export-policy" {
+        abort "Skipping component that's not an export policy"
       }
+
+      # Now we know that this component is a source or a sink for an export
+      # policy.
+      .tags.service_name = "telemetry.datumapis.com"
+      .tags.resource_kind = "ExportPolicy"
+      .tags.resource_uid = parts[3]
+      .tags.resource_name = parts[2]
 
       log(parts, level: "debug", rate_limit_secs: 0)
 
-      # First part is always the export policy UID
-      .tags.export_policy_uid = parts[0]
-
-        # Add source_name or sink_name based on component type
+      # First part is always the project name
+      .tags.project_name = parts[1]
+      # Second part is always the export policy UID
+      .tags.export_policy_uid = parts[3]
+      # Third part is always the source or sink name
       if .tags.component_kind == "source" {
-        .tags.source_name = parts[1]
+        .tags.source_name = parts[4]
       } else if .tags.component_kind == "sink" {
-        .tags.sink_name = parts[1]
+        .tags.sink_name = parts[4]
       }
 
 sinks:
