--- a/config/vector/base-vector-config.yaml
+++ b/config/vector/base-vector-config.yaml
@@ -37,7 +37,7 @@ transforms:
       log(parts, level: "debug", rate_limit_secs: 0)
 
       # First part is always the project name
-      .tags.project_name = parts[1]
+      .tags.resourcemanager_datumapis_com_project_name = parts[1]
       # Second part is always the export policy UID
       .tags.export_policy_uid = parts[3]
       # Third part is always the source or sink name
