chore: fix end-to-end tests

--- a/config/certmanager/kustomization.yaml
+++ b/config/certmanager/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
 - issuer.yaml
-- certificate-webhook.yaml
+# TODO: Enable this once we have a webhook that's functional
+#
+# - certificate-webhook.yaml
 - certificate-metrics.yaml
 
 configurations:
