--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,8 +1,17 @@
 resources:
 - manager.yaml
-apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
   newName: example.com/telemetry-services-operator
   newTag: v0.0.1
+
+  # Create a config map with the configuration to use for the operator.
+      # TODO: Determine why the deployment isn't getting updated to add in the hash
+configMapGenerator:
+- files:
+  - service-config.yaml
+  name: service-config
+  options:
+    disableNameSuffixHash: true
+apiVersion: kustomize.config.k8s.io/v1beta1
