chore: ensure file names are unique

--- a/config/vector/deployment.yaml
+++ b/config/vector/deployment.yaml
@@ -65,6 +65,8 @@ spec:
               value: /etc/vector/
             - name: RESOURCE
               value: both
+            - name: UNIQUE_FILENAMES
+              value: "true"
       volumes:
         - name: base-config
           configMap:
