--- a/config/samples/telemetry_v1alpha1_exportpolicy.yaml
+++ b/config/samples/telemetry_v1alpha1_exportpolicy.yaml
@@ -10,7 +10,7 @@ spec:
   # define multiple telemetry sources. Telemetry data will **not** be de-duped
   # if its selected from multiple sources.
   sources:
-    - name: "gateway-metrics"  # Descriptive name for the source
+    - name: "telemetry-metrics"  # Descriptive name for the source
       # Source metrics from the Datum Cloud platform
       metrics:
         # The options in this section are expected to be mutually exclusive. Users
@@ -24,7 +24,7 @@ spec:
   sinks:
     - name: grafana-cloud-metrics
       sources:
-        - gateway-metrics
+        - telemetry-metrics
       target:
         prometheusRemoteWrite:
           endpoint: "https://prometheus-prod-56-prod-us-east-2.grafana.net/api/prom/push"
