--- a/config/resource-metrics/kustomization.yaml
+++ b/config/resource-metrics/kustomization.yaml
@@ -3,7 +3,7 @@ configMapGenerator:
   - name: telemetry-services-resource-metrics
     files:
     - export-policies.yaml
-    - export-policies-2.yaml
+    - general.yaml
     options:
       labels:
         telemetry.datumapis.com/resource-metrics-config: "true"
