chore: publish images to github container registry

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,12 +2,15 @@ name: Publish Artifacts
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
   release:
     types: ['published']
 
 jobs:
   publish-container-image:
-    uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@v1.3.0
+    uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@publish-to-github
     with:
       image-name: telemetry-services-operator
     secrets: inherit
@@ -17,7 +20,7 @@ jobs:
       id-token: write
       contents: read
       packages: write
-    uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@v1.3.0
+    uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@publish-to-github
     with:
       bundle-name: ghcr.io/datum-cloud/telemetry-services-operator-kustomize
       bundle-path: config
