--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -64,7 +64,7 @@ spec:
           - --leader-elect
           - --health-probe-bind-address=:8081
           - --server-config=/config/service-config.yaml
-        image: controller:latest
+        image: ghcr.io/datum-cloud/telemetry-services-operator:latest
         name: manager
         ports: []
         securityContext:
