--- a/config/resource-metrics/kustomization.yaml
+++ b/config/resource-metrics/kustomization.yaml
@@ -5,4 +5,4 @@ configMapGenerator:
     - export-policies.yaml
     options:
       labels:
-        telemetry.datumapis.com/resource-metrics-config: "true"
+        telemetry.miloapis.com/resource-metrics-config: "true"
