--- a/config/iam/roles/telemetry-admin.yaml
+++ b/config/iam/roles/telemetry-admin.yaml
@@ -1,15 +1,15 @@
 apiVersion: iam.miloapis.com/v1alpha1
 kind: Role
 metadata:
-  name: telemetry.datumapis.com-admin
+  name: telemetry.miloapis.com-admin
   annotations:
     kubernetes.io/display-name: Telemetry Admin
     kubernetes.io/description: "Full access to all telemetry resources"
 spec:
   launchStage: Beta
   inheritedRoles:
-    - name: telemetry.datumapis.com-viewer
+    - name: telemetry.miloapis.com-viewer
   includedPermissions:
-    - telemetry.datumapis.com/exportpolicies.create
-    - telemetry.datumapis.com/exportpolicies.update
-    - telemetry.datumapis.com/exportpolicies.delete
+    - telemetry.miloapis.com/exportpolicies.create
+    - telemetry.miloapis.com/exportpolicies.update
+    - telemetry.miloapis.com/exportpolicies.delete
