--- a/config/rbac/exportpolicy_admin_role.yaml
+++ b/config/rbac/exportpolicy_admin_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project telemetry-services-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over telemetry.datumapis.com.
+# Grants full permissions ('*') over telemetry.miloapis.com.
 # This role is intended for users authorized to modify roles and bindings within the cluster,
 # enabling them to delegate specific permissions to other users or groups as needed.
 
@@ -14,13 +14,13 @@ metadata:
   name: exportpolicy-admin-role
 rules:
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies
   verbs:
   - '*'
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies/status
   verbs:
