--- a/config/rbac/exportpolicy_editor_role.yaml
+++ b/config/rbac/exportpolicy_editor_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project telemetry-services-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the telemetry.datumapis.com.
+# Grants permissions to create, update, and delete resources within the telemetry.miloapis.com.
 # This role is intended for users who need to manage these resources
 # but should not control RBAC or manage permissions for others.
 
@@ -14,7 +14,7 @@ metadata:
   name: exportpolicy-editor-role
 rules:
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies
   verbs:
@@ -26,7 +26,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies/status
   verbs:
