--- a/config/rbac/exportpolicy_viewer_role.yaml
+++ b/config/rbac/exportpolicy_viewer_role.yaml
@@ -1,7 +1,7 @@
 # This rule is not used by the project telemetry-services-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants read-only access to telemetry.datumapis.com resources.
+# Grants read-only access to telemetry.miloapis.com resources.
 # This role is intended for users who need visibility into these resources
 # without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
 
@@ -14,7 +14,7 @@ metadata:
   name: exportpolicy-viewer-role
 rules:
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies
   verbs:
@@ -22,7 +22,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - telemetry.datumapis.com
+  - telemetry.miloapis.com
   resources:
   - exportpolicies/status
   verbs:
