--- a/config/vector/base-vector-config.yaml
+++ b/config/vector/base-vector-config.yaml
@@ -17,9 +17,20 @@ transforms:
         abort "Skipping non-source or non-sink component"
       }
 
-      # Split component_id into parts. The component ID will match the pattern:
-      # `export-policy:<project-name>:<namespace>:<name>:<uid>:<source/sink name>`
+      # The component ID will match the pattern:
+      # `export-policy:<project-name>:<namespace>:<name>:<uid>:<component-name>`
+      #
+      # Index variables for each part
+      project_name_index = 1
+      namespace_index = 2
+      name_index = 3
+      uid_index = 4
+      component_name_index = 5
+
+      # Split the component ID into it's parts
       parts = split!(.tags.component_id, ":")
+
+
 
       # Only process if we have the correct number of parts.
       if length(parts) != 6 {
@@ -32,20 +43,20 @@ transforms:
       # policy.
       .tags.service_name = "telemetry.miloapis.com"
       .tags.resource_kind = "ExportPolicy"
-      .tags.resource_uid = parts[4]
-      .tags.resource_namespace = parts[2]
-      .tags.resource_name = parts[3]
+      .tags.resource_uid = parts[uid_index]
+      .tags.resource_namespace = parts[namespace_index]
+      .tags.resource_name = parts[name_index]
 
       log(parts, level: "debug", rate_limit_secs: 0)
 
       # First part is always the name of the project the export policy belongs
       # to.
-      .tags.resourcemanager_datumapis_com_project_name = parts[1]
+      .tags.resourcemanager_datumapis_com_project_name = parts[project_name_index]
 
       if .tags.component_kind == "source" {
-        .tags.source_name = parts[5]
+        .tags.source_name = parts[component_name_index]
       } else if .tags.component_kind == "sink" {
-        .tags.sink_name = parts[5]
+        .tags.sink_name = parts[component_name_index]
       }
 
 sinks:
